@@ -27,6 +27,7 @@ Version 0.11
     more keywords.
   * Irc logs lexer now handles xchat's default time format (#340)
     and correctly highlights lines ending in ``>``
+  * Support more delimiters for perl regular expressions (#258)
 
 - Added "Visual Studio" style.
 
